# rtoneweekend

./: .gitignore  Cargo.toml  camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  template.cpp  vec3.h
src/: camera.rs  color.rs  hittable.rs  hittable_list.rs  main.rs  material.rs  ray_color.rs  rtweekend.rs  scene.rs
src/gpu/: hittable_list.rs  material.rs  mod.rs  ray.rs  ray_color.rs  sphere.rs
src/gpu/vec3/: mod.rs  utils.rs  vec3array.rs
src/vec3/: mod.rs  utils.rs  vec3.rs
