[package]
name = "ray_tracing_one_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[dependencies]
rand = "0.8"
rayon = "1.5"
arrayfire = "3.8"
